Bug Fix - Text overflow in navigation and details view Bug Fix - Default icon when no thumb found Bug Fix - Retrieve player property each second better syncing with xbmc an avoid desync when phone is idle

--- a/client/src/less/modules/detail.less
+++ b/client/src/less/modules/detail.less
@@ -28,6 +28,10 @@
   color: @primaryColor;
   font-size: 2rem;
   text-align: center;
+  text-overflow: ellipsis;
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .detail p {
